@startuml tp1_uml.png
class ElementAvecNom {
  String titre
  String description()
  ElementAvecNom(String titre)
}
class ElementRepere
ElementAvecNom <|-- Axe
ElementAvecNom <|-- ElementRepere
ElementRepere <|-- Point
class Point {
  int x
  int y
  String description()
  Point()
  Point(String titre, Couleur c, int x, int y)
}
ElementRepere <|-- Droite
class Droite {
  double getLongueur()
  String description()
  Droite()
  Droite(String titre, Couleur c, Point start, Point end)
}
Droite "*" --> "1" Point : origine
Droite "*" --> "1" Point : destination
class Couleur {
  {static} Couleur auHasard()
  {static} Couleur noir()
  {static} Couleur blanc()
  {static} Couleur rouge()
  {static} Couleur vert()
  {static} Couleur bleu()
  int r
  int g
  int b
  Couleur()
  Couleur(int r, int g, int b)
}
ElementRepere "*" *-- "1" Couleur : couleur
class ElementRepere {
  String description()
  ElementRepere(String titre, Couleur couleur)
}
class Axe {
  int taille
  String description()
  Axe()
  Axe(String titre, int taille)
}
class EnsembleElementRepere {
  int tailleCourante
  int tailleMaximale
  void ajouter(ElementRepere e)
  ElementRepere recuperer(int i)
  EnsembleElementRepere()
}
EnsembleElementRepere "1" *-- "*" ElementRepere : elements
@enduml
